--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -229,7 +229,7 @@
 /*  */
 .cardWrapper {
   width: 80%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 30px;
